# dialog-final-v2

./: .gitignore  AGENTS.md  BUILD_GUIDE.md  CI_SETUP.md  Cargo.toml  FAILING_TO_BUILD.md  FRONTEND_TO_BACKEND_PLAN.md  FUTURE_PLANS.md  INVESTIGATE_WATCH.md  ITERATIVE_IMPLEMENTATION.md  LICENSE  LOCAL_APP_DATA_PLAN.md  NEED_PAUL.md  PLAN_BY_CLAUDE.md  PLAN_BY_GPT5.md  PROMPT.md  PURE_UI.md  README.md  REAL_IMPLEMENTATION_PLAN.md  SIMPLIFY_PLAN.md  TODO.md  UNIFFI_PLAN.md  UNIFY_V2.md  UNIFY_WITH_UNIFFI_PLAN.md  build-uniffi-ios.sh  build-uniffi-package.sh  ios.sh  justfile  nak-giftwrap.patch  nak-negentropy.patch  rebuild.sh  setup_hooks.sh  setup_nak_local.sh  test_cli_persistence.sh  test_quick.sh  test_watch.sh
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: ios-build.yml  test.yml
DialogPackage/: Package.swift
DialogPackage/Sources/dialogFFI/: dummy.c
DialogPackage/Sources/dialogFFI/include/: dialogFFIWrapper.h
dialog_cli/: Cargo.toml  README.md
dialog_cli/src/: main.rs
dialog_lib/: Cargo.toml  README.md
dialog_lib/src/: lib.rs  note.rs  query.rs  watch.rs
dialog_lib/tests/: integration.rs
dialog_lib/tests/common/: mod.rs
dialog_uniffi/: Cargo.toml  build.rs
dialog_uniffi/src/: commands.rs  convert.rs  dialog.udl  keys.rs  lib.rs  mock_data.rs  models.rs  runtime.rs  state.rs  watch.rs
dialog_uniffi/tests/: common.rs  integration.rs
docs/: ARCHITECTURE.md  BUILD_GUIDE.md  CI_SETUP.md
docs/archive/: ASYNC_PROBLEMS.md
ios/: .env.example  build-ios.sh  clean-ios.sh  project-package.yml  project.yml
ios/DialogApp/Resources/: Info.plist
ios/DialogApp/Sources/: DialogApp.swift
ios/DialogApp/Sources/Models/: MockData.swift  Note.swift
ios/DialogApp/Sources/Utils/: KeychainService.swift
ios/DialogApp/Sources/ViewModels/: InboxViewModel.swift
ios/DialogApp/Sources/Views/: ContentView.swift  InboxView.swift  SearchSheet.swift  SettingsView.swift  TopicPickerView.swift
ios/DialogApp/Sources/Views/Components/: InputBar.swift  NavigationBar.swift  NoteBubble.swift
ios/DialogPackage/: Package.swift
ios/DialogPackage/Sources/Dialog/: dialog.swift
ios/DialogPackage/XCFrameworks/dialogFFI_v18.xcframework/: Info.plist
ios/DialogPackage/XCFrameworks/dialogFFI_v2.xcframework/: Info.plist
ios/DialogPackage/XCFrameworks/dialogFFI_v2.xcframework/ios-arm64/Headers/: module.modulemap
ios/DialogPackage/XCFrameworks/dialogFFI_v2.xcframework/macos-arm64/Headers/: dialogFFI.h
test_env/: .env
