[package]
name = "dialog_final_v2_cli"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Dialog CLI — Nostr-based encrypted notes-to-self"
repository = "https://github.com/<your-org-or-user>/dialog-final-v2"
readme = "README.md"
keywords = ["nostr", "notes", "cli", "encryption"]
categories = ["command-line-utilities"]

[[bin]]
name = "dialog"
path = "src/main.rs"

[dependencies]
dialog_lib = { package = "dialog_final_v2_lib", path = "../dialog_lib", version = "0.1.0" }
nostr-sdk = { workspace = true }
clap = { version = "4", features = ["derive"] }
tokio = { workspace = true }
thiserror = { workspace = true }
