[package]
name = "dialog_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
nostr-sdk = { version = "0.37", features = ["ndb", "nip44"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
keyring = { version = "3", optional = true }

[features]
default = ["keyring"]

[dev-dependencies]
tokio-test = "0.4"