[package]
name = "dialog_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
nostr-sdk = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
directories = { workspace = true }
keyring = { version = "3", optional = true }

[features]
default = ["keyring"]

[dev-dependencies]
tokio-test = "0.4"