[package]
name = "dialog_final_v2_lib"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Dialog library — Nostr-based encrypted notes-to-self (core Rust SDK)"
repository = "https://github.com/<your-org-or-user>/dialog-final-v2"
readme = "README.md"
keywords = ["nostr", "notes", "encryption"]
categories = ["cryptography::cryptocurrencies", "database", "api-bindings"]

[lib]
name = "dialog_lib"

[dependencies]
nostr-sdk = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
directories = { workspace = true }
keyring = { version = "3", optional = true }

[features]
default = ["keyring"]

[dev-dependencies]
tokio-test = "0.4"
