[package]
name = "dialog_uniffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]
name = "dialog_uniffi"

[dependencies]
uniffi = { version = "0.28", features = ["tokio"] }
uniffi_bindgen = { version = "0.28", optional = true }
camino = { version = "1", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
once_cell = "1"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }

[[bin]]
name = "uniffi-bindgen"
required-features = ["bindgen-support"]

[features]
bindgen-support = ["uniffi_bindgen", "camino"]

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
