[package]
name = "dialog_uniffi"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]
name = "dialog_uniffi"

[dependencies]
dialog_lib = { package = "dialog_final_v2_lib", path = "../dialog_lib" }
nostr-sdk = { workspace = true }
uniffi = { workspace = true }
uniffi_bindgen = { workspace = true, optional = true }
camino = { version = "1", optional = true }
tokio = { workspace = true }
once_cell = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

[[bin]]
name = "uniffi-bindgen"
required-features = ["bindgen-support"]

[features]
bindgen-support = ["uniffi_bindgen", "camino"]

[build-dependencies]
uniffi_build = { workspace = true }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
